# ting-expense-agg

./: .gitignore  Cargo.toml  LICENSE  README.md  build-gr.sh  build.sh  check-gr-build.sh  pack-tree.txt  serve-existing.sh
assets/: icon-32.png.kra  index.html  ting-expense-a.js
src/: crosstyping.rs  db_client_view.rs  db_slice.rs  dbs.rs  dbs2.rs  ecs.rs  graphics.rs  main.rs  pie.rs  remotehost.rs  remotehost_wasm.rs  selfhost.rs  serv2.rs  server.rs
src/server/: sqlite.rs
src/widgets/: mod.rs  pie.rs
