[package]
name = "ting-expense-a"
authors = ["Ender Ting <pythonhunter146@gmail.com>"]
version = "0.3.0"
edition = "2021"


# Five build options, with more to come:
# 1. x86_64-unknown-linux-gnu +headless
#     Compiles axum-based server for tracking expenses for Linux target.
# 2. x86_64-pc-windows-gnu +headless
#     Compiles axum-based server for tracking expenses for Windows target.
# 3. wasm32-unknown-unknown
#     Compiles eframe-based WebAssembly application for browsers, with local DB.
# 4. x86_64-unknown-linux-gnu
#     Compiles eframe-based native application for Linux target, with local DB.
# 5. x86_64-pc-windows-gnu
#     Compiles eframe-based native application for Windows target, with local DB.
# android: to come
# ios: to come

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.7.3", features = ["ws"], optional = true }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-signed"], optional = true }
eframe = { version = "0.30.0", features = ["accesskit", "default_fonts", "glow", "persistence", "wayland"], optional = true }
egui = { version = "0.30.0", optional = true }
futures = "0.3.31"
liquemap = "0.3.0"
postcard = { version = "1.1.1", features = ["use-std"] }
reqwest = { version = "0.12.15", features = ["cookies"] }
rusqlite = { version = "0.33.0", features = ["bundled", "time", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "local-offset", "serde"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17" }
tokio-tungstenite = "0.26.2"
totp-rs = { version = "5.7.0", features = ["gen_secret", "zeroize"] }
tungstenite = "0.26.2"

[features]
server = ["dep:axum", "dep:axum-extra"]
graphics = ["dep:eframe", "dep:egui"]
selfhost = []
default  = []

# Remember about
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
#   BUT IF SOMETHING ELSE enables jpeg-decoder itself
# parallel = ["jpeg-decoder?/rayon"]


[dependencies.uuid]
version = "1.11.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde", "v7"]

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

